    dpkg-gensymbols is now able to detect NEW/MISSING symbols when patterns are
    present in the symbol file (Closes: #541464). Please note, however, that
    there is no way to detect symbol changes in the pattern match sets.
  * Add source version to the dpkg-gensymbols diff label, reformat it according
    to the rules of dpkg-name.
  * Add -a<arch> option to dpkg-gensymbols.

  [ Jonathan Nieder ]
  * Fix a file handle leak in “dpkg-deb --info”. Thanks to Raphael Geissert
    for the report and patch.

  [ Updated dpkg translations ]
  * French (Christian PERRIER).
  * German (Sven Joachim).
  * Italian 'Milo Casagrande). Closes: #567531
  * Simplified Chinese (Aron Xua). Closes: #558794
  * Slovak (Ivan Masár). Closes: #559269
  * Swedish (Peter Krefting).

  [ Updated dselect translations ]
  * German (Sven Joachim).

  [ Updated man page translations ]
  * French (Christian Perrier): correcting inconsistencies for the translation
    of "original" here and there. Thanks to Julien Valroff for pointing this.
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * French (Christian PERRIER).
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

 -- Raphaël Hertzog <hertzog@debian.org>  Tue, 17 Nov 2009 17:24:47 +0100

dpkg (1.15.5.6) unstable; urgency=low

  * dpkg-source: with format "3.0 (quilt)" ensure quilt's .pc directory is
    created before trying to register a new patch in .pc/applied-patches.
    Thanks to Tommi Vainikainen <thv+debian@iki.fi> for the report and the
    patch. Closes: #561237
  * Fix dpkg-buildpackage to set "parallel=" in DEB_BUILD_OPTIONS instead of
    the invalid "parallel=-1" when option "-j" is given. Closes: #562038
  * Clarify how dpkg-source --print-format works and display messages on
    STDERR when the requested format is discarded. Closes: #560391
  * Add ${misc:Depends} in all Depends fields.

 -- Raphael Hertzog <hertzog@debian.org>  Fri, 08 Jan 2010 17:57:43 +0100
