@@ -90,6 +90,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Add source version to the dpkg-gensymbols diff label, reformat it according
     to the rules of dpkg-name.
   * Add -a<arch> option to dpkg-gensymbols.
+  * Add -q option to dpkg-gensymbols. -c0 will never fail but still generate a
+    diff. Use -c0 -q to keep dpkg-gensymbols completely quiet as before
+    (Closes: #568228).
 
   [ Jonathan Nieder ]
   * Fix a file handle leak in “dpkg-deb --info”. Thanks to Raphael Geissert
